# portfolio

./: .gitignore  =  Pipfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200818_0359.py  0002_auto_20200818_2049.py  0003_auto_20200818_1547.py  0003_auto_20200818_2107.py  0004_auto_20200818_1623.py  0004_auto_20200818_2152.py  0005_auto_20200818_1818.py  0005_post_header_image_text.py  0006_auto_20200818_2232.py  0007_auto_20200818_2259.py  0008_post_header_thumbnail.py  0009_auto_20200818_2338.py  0010_remove_post_header_thumbnail.py
custom_user/: admin.py  forms.py  models.py  urls.py  views.py
custom_user/migrations/: 0001_initial.py
custom_user_api/: apps.py  serializers.py  urls.py  views.py
grocery_api/: apps.py  serializers.py  urls.py  views.py
grocery_list_backend/: admin.py  apps.py  models.py
portfolio/: settings.py  urls.py
portfolio_layout/: apps.py
projects/: admin.py  display_text.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_auto_20200727_1722.py  0002_auto_20200818_0229.py  0003_auto_20200727_1727.py  0003_auto_20200818_0233.py  0004_project_is_featured.py  0005_project_display_order.py
projects/templates/: 500.html  backend.html  base.html  featured.html  frontend.html  index.html  menu_bar.html  project_detail.html
static/: projects.css
static_deploy/: projects.css
staticdeploy/: projects.css
templates/: 404.html  base.html  index.html  navbar.html
(+22 files in other folders)
